--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -40,23 +40,28 @@
     "institution": "University of XYZ",
     "period": "2015 - 2019"
   },
-  "languas": {
-    "spanish": {
-      "nameSpanish": "Español",
-      "descriptionSpanish": "Lengua Materna",
-      "percentageSpanish": 100
+  "languas": [
+    {
+      "key": 1,
+      "nameIdiom": "Español",
+      "descriptionIdiom": "Lengua Materna",
+      "percentage": 95
     },
-    "english": {
-      "nameEnglish": "Inglés",
-      "descriptionEnglish": "Segundo Idioma",
-      "percentageEnglish": 90
+    {
+      "key": 2,
+      "nameIdiom": "Inglés",
+      "descriptionIdiom": "Segunda Lengua",
+      "percentage": 90
     },
-    "arabic": {
-      "nameArabic": "Árabe",
-      "descriptionArabic": "Tercer Idioma",
-      "percentageArabic": 60
+    {
+      "key": 3,
+      "nameIdiom": "Arabe",
+      "descriptionIdiom": "Tercera Lengua",
+      "percentage": 60
     }
-  },
+  ],
+  "languagesNull": "No hay idiomas",
+  "languagesLevel": "Nivel Estimado",
   "workExperienceTitle": "Experiencia Laboral",
   "workExperienceFirst": {
     "role": "Desarrollador de Software",
@@ -70,7 +75,7 @@
     "period": "2020 - Present",
     "description": "Developing web and mobile applications."
   },
-  "workExperienceNull" : "No hay experiencia laboral",
+  "workExperienceNull": "No hay experiencia laboral",
   "nameLanguage": "Languajes",
   "descriptionLanguage": "Lenguas e Idiomas hablados o escritos.",
   "socialNetworks": "Redes Sociales",
