FIX - Intento del arreglo de los idiomas

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -67,7 +67,7 @@
   "workExperienceItems": [
     {
       "key": 1,
-      "role": "مطور برامج",
+      "position": "مطور برامج",
       "company": "شركة تكنولوجيا",
       "period": "2020 - حتى الآن",
       "description": "تطوير تطبيقات الويب والهاتف المحمول."
