chore - add new form in Contacts view

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -118,13 +118,26 @@
     { "key": 2, "name": "GitHub", "url": "https://github.com/WADEPAR6", "icon": "github" }
   ],
   "aboutMe": "عني",
-  "personalNumber": "0963307063",
+  "personalNumber": "+593 963 307 063",
   "institutionalEmail": "kparedes9203@uta.edu.ec",
   "personalEmail": "raulparedes20031221@gmail.com",
   "download": "تحميل PDF",
   "portafolio": "السيرة الذاتية",
-  "contacts": "التواصل",
-  "contactsDescription": "معلومات الاتصال الرئيسية: المدينة، الهاتف، البريد الإلكتروني، ولينكدإن للاستفسارات المهنية أو الأكاديمية.",
+  "contacts": "جهات الاتصال",
+  "contactsDescription": "معلومات الاتصال الرئيسية: المدينة، الهاتف، البريد الإلكتروني، ولينكد إن للاستفسارات المهنية أو الأكاديمية.",
+  "contactFormTitle": "أرسل لي رسالة",
+  "contactFormName": "الاسم الكامل",
+  "contactFormNamePlaceholder": "اسمك",
+  "contactFormEmail": "البريد الإلكتروني",
+  "contactFormEmailPlaceholder": "your@email.com",
+  "contactFormSubject": "الموضوع",
+  "contactFormSubjectPlaceholder": "عن ماذا تريد التحدث؟",
+  "contactFormMessage": "الرسالة",
+  "contactFormMessagePlaceholder": "اكتب رسالتك هنا...",
+  "contactFormSubmit": "إرسال الرسالة",
+  "contactFormSending": "جاري الإرسال...",
+  "contactFormSuccess": "تم إرسال الرسالة بنجاح! سأرد قريباً.",
+  "contactFormError": "خطأ في إرسال الرسالة. يرجى المحاولة مرة أخرى.",
   "address": "أمباتو، الإكوادور",
   "birthdate": "21/12/2003",
   "fullName": "كينيث باريذيس",
