--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -117,13 +117,26 @@
     { "key": 2, "name": "GitHub", "url": "https://github.com/WADEPAR6", "icon": "github" }
   ],
   "aboutMe": "About Me",
-  "personalNumber": "0963307063",
+  "personalNumber": "+593 963 307 063",
   "institutionalEmail": "kparedes9203@uta.edu.ec",
   "personalEmail": "raulparedes20031221@gmail.com",
   "download": "Download PDF",
   "portafolio": "Portfolio",
   "contacts": "Contacts",
   "contactsDescription": "Main contact information: city, phone, email, and LinkedIn for professional or academic inquiries.",
+  "contactFormTitle": "Send me a message",
+  "contactFormName": "Full name",
+  "contactFormNamePlaceholder": "Your name",
+  "contactFormEmail": "Email",
+  "contactFormEmailPlaceholder": "your@email.com",
+  "contactFormSubject": "Subject",
+  "contactFormSubjectPlaceholder": "What would you like to talk about?",
+  "contactFormMessage": "Message",
+  "contactFormMessagePlaceholder": "Write your message here...",
+  "contactFormSubmit": "Send message",
+  "contactFormSending": "Sending...",
+  "contactFormSuccess": "Message sent successfully! I'll reply soon.",
+  "contactFormError": "Error sending message. Please try again.",
   "address": "Ambato, Ecuador",
   "birthdate": "21/12/2003",
   "fullName": "Kenneth Paredes",
