--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -117,13 +117,26 @@
     { "key": 2, "name": "GitHub", "url": "https://github.com/WADEPAR6", "icon": "github" }
   ],
   "aboutMe": "Sobre Mí",
-  "personalNumber": "0963307063",
+  "personalNumber": "+593 963 307 063",
   "institutionalEmail": "kparedes9203@uta.edu.ec",
   "personalEmail": "raulparedes20031221@gmail.com",
   "download": "Descargar PDF",
   "portafolio": "Portafolio",
   "contacts": "Contactos",
   "contactsDescription": "Información de contacto principal: ciudad, teléfono, correo y LinkedIn para consultas profesionales o académicas.",
+  "contactFormTitle": "Envíame un mensaje",
+  "contactFormName": "Nombre completo",
+  "contactFormNamePlaceholder": "Tu nombre",
+  "contactFormEmail": "Correo electrónico",
+  "contactFormEmailPlaceholder": "tu@email.com",
+  "contactFormSubject": "Asunto",
+  "contactFormSubjectPlaceholder": "¿Sobre qué quieres hablar?",
+  "contactFormMessage": "Mensaje",
+  "contactFormMessagePlaceholder": "Escribe tu mensaje aquí...",
+  "contactFormSubmit": "Enviar mensaje",
+  "contactFormSending": "Enviando...",
+  "contactFormSuccess": "¡Mensaje enviado correctamente! Te responderé pronto.",
+  "contactFormError": "Error al enviar el mensaje. Por favor, intenta nuevamente.",
   "address": "Ambato, Ecuador",
   "birthdate": "21/12/2003",
   "fullName": "Kenneth Paredes",
