chore - change styles and update data on Education

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -35,10 +35,7 @@
       "institution": "الجامعة التقنية في أمباتو",
       "period": "2021 - 2025",
       "details": [
-        "تدريب في تطوير التطبيقات والأنظمة الحديثة الموجهة لاحتياجات المستخدمين والمنظمات.",
-        "العمل الجماعي مع التركيز على المنهجيات الرشيقة وأفضل الممارسات.",
-        "مشاركة نشطة في مشاريع أكاديمية تركز على حل المشكلات بحلول رقمية إبداعية.",
-        "تطوير التفكير النقدي والمهارات التحليلية لاتخاذ القرار في البيئات التقنية."
+        "تدريب شامل في تطوير البرمجيات مع التركيز على المنهجيات الرشيقة، وهندسة الأنظمة الحديثة، وحل المشكلات الإبداعي من خلال الحلول الرقمية التي تؤثر إيجاباً على المستخدمين والمنظمات."
       ]
     },
     {
