--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,10 +35,7 @@
       "institution": "Technical University of Ambato",
       "period": "2021 - 2025",
       "details": [
-        "Training in the development of modern applications and systems tailored to real user and organizational needs.",
-        "Collaborative teamwork with a focus on agile methodologies and best development practices.",
-        "Active participation in academic projects focused on solving problems through creative digital solutions.",
-        "Development of critical thinking and analytical skills for decision-making in technological environments."
+        "Comprehensive training in software development focused on agile methodologies, modern system architecture, and creative problem-solving through digital solutions that positively impact users and organizations."
       ]
     },
     {
