--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -35,10 +35,7 @@
       "institution": "Universidad Técnica de Ambato",
       "period": "2021 - 2025",
       "details": [
-        "Formación en desarrollo de aplicaciones y sistemas modernos adaptados a las necesidades reales de usuarios y organizaciones.",
-        "Trabajo colaborativo en equipos con enfoque en metodologías ágiles y buenas prácticas de desarrollo.",
-        "Participación activa en proyectos académicos enfocados en resolver problemas mediante soluciones digitales creativas.",
-        "Desarrollo de pensamiento crítico y habilidades analíticas para la toma de decisiones en entornos tecnológicos."
+        "Formación integral en desarrollo de software con enfoque en metodologías ágiles, arquitectura de sistemas modernos y resolución creativa de problemas mediante soluciones digitales que impactan positivamente a usuarios y organizaciones."
       ]
     },
     {
